[package]
name = "bno08x-async"
version = "0.2.0"
edition = "2021"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
description = "BNO080 AHRS driver"
license = "BSD-3-Clause"
repository = "https://github.com/MJE10/bno080"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "embedded-hal-driver",
    "bno080",
    "ahrs",
    "imu"
]
readme = "README.md"

[dependencies]
embedded-hal-async = "1.0.0"
defmt = { version = "0.3.8", optional = true }

[features]
default = []
